--- a/apps/aperture-qa/trioapp.yaml
+++ b/apps/aperture-qa/trioapp.yaml
@@ -12,7 +12,7 @@ spec:
     namespace: demo-ta-qa
   source:
     path: manifests/trio-app/aperture-qa
-    repoURL: 'https://github.com/NimRegev/DevOps'
+    repoURL: 'https://github.com/aperture-sci/DevOps'
     targetRevision: main
     # plugin:
     #   name: kustomize-build-with-helm
