--- a/apps/aperture-dev/trioapp.yaml
+++ b/apps/aperture-dev/trioapp.yaml
@@ -6,6 +6,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
   annotations:
     argocd.argoproj.io/manifest-generate-paths: /manifests/trio-app/aperture-dev
+    codefresh.io/product: demo-trio
 spec:
   destination:
     name: 'demo-dev'
