--- a/apps/aperture-staging/trioapp.yaml
+++ b/apps/aperture-staging/trioapp.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-trioapp-qa
+  name: demo-trioapp-staging
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   annotations:
-    argocd.argoproj.io/manifest-generate-paths: /manifests/trio-app/aperture-qa
+    argocd.argoproj.io/manifest-generate-paths: /manifests/trio-app/aperture-staging
     codefresh.io/product: demo-trioapp
 spec:
   destination:
-    name: 'demo-qa'
-    namespace: demo-ta-qa
+    name: 'demo-staging'
+    namespace: demo-ta-staging
   source:
-    path: manifests/trio-app/aperture-qa
+    path: manifests/trio-app/aperture-staging
     repoURL: 'https://github.com/aperture-sci/DevOps'
     targetRevision: main
     # plugin:
