--- a/apps/aperture-dev/trioapp.yaml
+++ b/apps/aperture-dev/trioapp.yaml
@@ -13,7 +13,7 @@ spec:
     namespace: demo-ta-dev
   source:
     path: manifests/trio-app/aperture-dev
-    repoURL: 'https://github.com/aperture-sci/DevOps'
+    repoURL: 'https://github.com/NimRegev/aperture-sci/DevOps'
     targetRevision: main
     # plugin:
     #   name: kustomize-build-with-helm
