--- a/apps/aperture-eu/trioapp.yaml
+++ b/apps/aperture-eu/trioapp.yaml
@@ -13,7 +13,7 @@ spec:
     targetRevision: main
   destination:
     name: in-cluster
-    namespace: demo-ta-prod
+    namespace: demo-ta-eu
   syncPolicy:
     automated:
       prune: true
