--- a/apps/aperture-asia/trioapp.yaml
+++ b/apps/aperture-asia/trioapp.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-trioapp-eu
+  name: demo-trioapp-asia
   annotations:
     argocd.argoproj.io/manifest-generate-paths: /manifests/trio-app/aperture-prod-eu
     codefresh.io/product: demo-trioapp
@@ -13,7 +13,7 @@ spec:
     targetRevision: main
   destination:
     name: in-cluster
-    namespace: demo-ta-eu
+    namespace: demo-ta-asia
   syncPolicy:
     automated:
       prune: true
