--- a/apps/aperture-staging/trioapp.yaml
+++ b/apps/aperture-staging/trioapp.yaml
@@ -2,26 +2,29 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: demo-trioapp-staging
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
   annotations:
-    argocd.argoproj.io/manifest-generate-paths: /manifests/trio-app/aperture-staging
+    argocd.argoproj.io/manifest-generate-paths: /manifests/trio-app/aperture-prod-eu
     codefresh.io/product: demo-trioapp
 spec:
-  destination:
-    name: 'in-cluster'
-    namespace: demo-ta-staging
-  source:
-    path: manifests/trio-app/aperture-staging
-    repoURL: `https://github.com/NimRegev/DevOps.git`
-    targetRevision: main
-    # plugin:
-    #   name: kustomize-build-with-helm
   project: default
+  source:
+    path: manifests/trio-app/aperture-prod-eu
+    repoURL: https://github.com/NimRegev/DevOps.git
+    targetRevision: main
+  destination:
+    name: in-cluster
+    namespace: demo-staging
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: false
     syncOptions:
+      - PrunePropagationPolicy=foreground
+      - Replace=false
+      - PruneLast=false
+      - Validate=true
       - CreateNamespace=true
-      # - ServerSideApply=true
+      - ApplyOutOfSyncOnly=false
+      - ServerSideApply=true
+      - RespectIgnoreDifferences=false
